# flaskapp

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
src/flaskapp/: app.py
tests/: test_app.py
