[tool.poetry]
name = "flaskapp"
version = "0.1.0"
description = ""
authors = ["Bruce McIntyre <bruce.mcintyre@gmail.com>"]
readme = "README.md"
packages = [{include="flaskapp", from="src"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.2"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pytest-flask = "^1.3.0"
pytest-cov = "^4.1.0"
coverage = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
